--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -20,7 +20,7 @@
     emit_invalid_record_to_error false
         <parse>
             @type regexp
-            expression /^.*"time_date": "(?<time>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>[^ ]*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)", "args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*)}/
+            expression /^.*"time_date": "(?<time>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>[^ ]*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)", "args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*), "user_agent": "(?<http_user_agent>[^ ]*)"}/
             time_key time
             # time field used by buffer when pushing logs to Elasticsearch
             keep_time_key true
