temp revert whitelist filter, first fix the messages not appearing at all

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -47,14 +47,14 @@
     </filter>
 
     # Discard events without fluentd_ingress set to "true"
-    <filter kubernetes.ingress.**>
-       @type grep
-       @id id_grep.fluentd_ingress
-       <regexp>
-          key fluentd_ingress
-          pattern /^true$/
-       </regexp>
-    </filter>
+    #<filter kubernetes.ingress.**>
+    #   @type grep
+    #   @id id_grep.fluentd_ingress
+    #   <regexp>
+    #      key fluentd_ingress
+    #      pattern /^true$/
+    #   </regexp>
+    #</filter>
 
     <filter kubernetes.ingress.**>
         @type geoip
