revert to v1.1.0 for debugging

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -124,7 +124,9 @@
         timeout_label @output
         # Application logs always start with a timestamp
         # Regex matches "2023-02-23T13:20:52.284+01:00" and "13:21:45.159"
-        multiline_start_regexp /[^T]?\d{2}:\d{2}:\d{2}\.\d+[^ ]*/
+        # multiline_start_regexp /[^T]?\d{2}:\d{2}:\d{2}\.\d+[^ ]*/
+        # reverting to release 1.1.0 for debugging
+        multiline_start_regexp /\d{2}:\d{2}:\d{2}\.\d+/
         flush_interval 5s
         use_first_timestamp true
     </filter>
