fix for the missing logs

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -43,7 +43,7 @@
             # extract wskey value if it exists
             wskey ${record["args"][/.*wskey=([^&]*)/,1]}
             # Sets property fluentd_ingress on the log event analogous to how fluentd_include is set in apps.conf
-            # fluentd_ingress ${record.dig("kubernetes", "annotations", "fluentd/ingress") ? record.dig("kubernetes", "annotations", "fluentd/ingress") : ("false")}
+            fluentd_ingress ${record.dig("kubernetes", "annotations", "fluentd/ingress") ? record.dig("kubernetes", "annotations", "fluentd/ingress") : ("false")}
         </record>
     </filter>
 
