--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -15,15 +15,45 @@
 # see: https://github.com/fluent/fluentd/issues/1617
 
     <filter kubernetes.ingress.**>
-    @type parser
-    key_name message
-    emit_invalid_record_to_error false
+        @type parser
+        key_name message
+        emit_invalid_record_to_error false
         <parse>
-            @type regexp
-            # expression /^.*"time_date": "(?<time>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>[^ ]*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)", "args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*), "user_agent": "(?<http_user_agent>[^ ]*)"}/
-            expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S+)",\s?"host": "(?<host>\S+)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]+)",\s?"request_uri": "(?<request_uri>\S+)",\s?"args": "(?<args>\S+)",\s?"request_id": "(?<request_id>[0-9a-fA-F]+)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S+|Empty string)",\s?"upstream_status": (?<upstream_status>\d{3}),\s?"request_time": (?<request_time>-?[\d\.]+),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]+),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]+),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]+),\s?"user_agent": "(?<http_user_agent>.+*)"}/
+            # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
+            # matches from top to bottom, so more-specific patterns should always come first
+
+            @type multi_format
+            <pattern>
+                format regexp
+                expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S+)",\s?"host": "(?<host>\S+)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]+)",\s?"request_uri": "(?<request_uri>\S+)",\s?"args": "(?<args>\S+)",\s?"request_id": "(?<request_id>[0-9a-fA-F]+)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S+|Empty string)",\s?"upstream_status": (?<upstream_status>\d{3}),\s?"request_time": (?<request_time>-?[\d\.]+),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]+),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]+),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]+),\s?"user_agent": "(?<http_user_agent>.+*)"}/
+            </pattern>
+
+            <pattern>
+                format regexp
+                expression /^.*"time_date": "(?<time>.+?)",\s?"client": "(?<client-ipv4>.+?)",\s?"host": "(?<host>.+?)",(?<log>.*)$/
+            </pattern>
+
+            <pattern>
+                format regexp
+                expression /^.*"time_date": "(?<time>.+?)",.+?,\s?"host": "(?<host>.+?)",(?<log>.*)$/
+            </pattern>
+
+            <pattern>
+                format regexp
+                expression /^.*"time_date": "(?<time>.+?)",.+?(?<log>.*)$/
+            </pattern>
+
+            <pattern>
+                format regexp
+                expression /^(?<log>.*)$/
+            </pattern>
+
+            #@type regexp
+            ## expression /^.*"time_date": "(?<time>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>[^ ]*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)", "args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*), "user_agent": "(?<http_user_agent>[^ ]*)"}/
+            #expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S+)",\s?"host": "(?<host>\S+)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]+)",\s?"request_uri": "(?<request_uri>\S+)",\s?"args": "(?<args>\S+)",\s?"request_id": "(?<request_id>[0-9a-fA-F]+)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S+|Empty string)",\s?"upstream_status": (?<upstream_status>\d{3}),\s?"request_time": (?<request_time>-?[\d\.]+),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]+),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]+),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]+),\s?"user_agent": "(?<http_user_agent>.+*)"}/
+
             time_key time
-            # time field used by buffer when pushing logs to Elasticsearch
+            ## time field used by buffer when pushing logs to Elasticsearch
             keep_time_key true
             time_format %Y-%m-%dT%H:%M:%S%:z
             types status:integer,upstream_status:integer,request_time:float,upstream_connect_time:float,upstream_header_time:float,upstream_response_time:float
