--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -19,8 +19,9 @@
         key_name message
         emit_invalid_record_to_error false
         <parse>
-            # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
-            # matches from top to bottom, so more-specific patterns should always come first
+            # Plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
+            # This is to catch messages that don't conform to the most specific pattern.
+            # Matches from top to bottom, so more-specific patterns should always come first
 
             @type multi_format
             <pattern>
@@ -48,10 +49,6 @@
                 expression /^(?<log>.*)$/
             </pattern>
 
-            #@type regexp
-            ## expression /^.*"time_date": "(?<time>[^ ]*)", "client": "(?<client-ipv4>[^ ]*)", "host": "(?<host>[^ ]*)", "scheme": "(?<scheme>https?)", "request_method": "(?<request_method>[^ ]*)", "request_uri": "(?<request_uri>[^ ]*)", "args": "(?<args>[^ ]*)", "request_id": "(?<request_id>[^ ]*)", "status": (?<status>[^ ]*), "upstream_addr": "(?<upstream_addr>[^ ]*)", "upstream_status": (?<upstream_status>[^ ]*), "request_time": (?<request_time>[^ ]*), "upstream_response_time": (?<upstream_response_time>[^ ]*), "upstream_connect_time": (?<upstream_connect_time>[^ ]*), "upstream_header_time": (?<upstream_header_time>[^ ]*), "user_agent": "(?<http_user_agent>[^ ]*)"}/
-            #expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S+)",\s?"host": "(?<host>\S+)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]+)",\s?"request_uri": "(?<request_uri>\S+)",\s?"args": "(?<args>\S+)",\s?"request_id": "(?<request_id>[0-9a-fA-F]+)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S+|Empty string)",\s?"upstream_status": (?<upstream_status>\d{3}),\s?"request_time": (?<request_time>-?[\d\.]+),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]+),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]+),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]+),\s?"user_agent": "(?<http_user_agent>.+*)"}/
-
             time_key time
             ## time field used by buffer when pushing logs to Elasticsearch
             keep_time_key true
@@ -77,7 +74,7 @@
         </record>
     </filter>
 
-    # Discard events without fluentd_ingress set to "true"
+    # Whitelisting: only allow messages that have fluentd_ingress set to "true"
     #<filter kubernetes.ingress.**>
     #   @type grep
     #   @id id_grep.fluentd_ingress
@@ -86,6 +83,16 @@
     #      pattern /^true$/
     #   </regexp>
     #</filter>
+
+    # Blacklisting: exclude events that match the exclude pattern
+    <filter kubernetes.ingress.**>
+       @type grep
+       @id id_grep.fluentd_ingress
+       <exclude>
+          key host
+          pattern /oai/
+       </exclude>
+    </filter>
 
     <filter kubernetes.ingress.**>
         @type geoip
