--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -26,7 +26,7 @@
             @type multi_format
             <pattern>
                 format regexp
-                expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S+)",\s?"host": "(?<host>\S+)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]+)",\s?"request_uri": "(?<request_uri>\S+)",\s?"args": "(?<args>\S+)",\s?"request_id": "(?<request_id>[0-9a-fA-F]+)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S+|Empty string)",\s?"upstream_status": (?<upstream_status>\d{3}),\s?"request_time": (?<request_time>-?[\d\.]+),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]+),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]+),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]+),\s?"user_agent": "(?<http_user_agent>.+*)"}/
+                expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S+)",\s?"host": "(?<host>\S+)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]+)",\s?"request_uri": "(?<request_uri>\S+)",\s?"args": "(?<args>\S+)",\s?"request_id": "(?<request_id>[0-9a-fA-F]+)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S+|Empty string)",\s?"upstream_status": (?<upstream_status>\d{3}),\s?"request_time": (?<request_time>-?[\d\.]+),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]+),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]+),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]+),\s?"user_agent": "(?<http_user_agent>.+)"}/
             </pattern>
 
             <pattern>
@@ -85,14 +85,14 @@
     #</filter>
 
     # Blacklisting: exclude events that match the exclude pattern
-    <filter kubernetes.ingress.**>
-       @type grep
-       @id id_grep.fluentd_ingress
-       <exclude>
-          key host
-          pattern /oai/
-       </exclude>
-    </filter>
+    #<filter kubernetes.ingress.**>
+    #   @type grep
+    #   @id id_grep.fluentd_ingress
+    #   <exclude>
+    #      key host
+    #      pattern /oai/
+    #   </exclude>
+    #</filter>
 
     <filter kubernetes.ingress.**>
         @type geoip
