and debugging again

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -85,14 +85,14 @@
     #</filter>
 
     # Blacklisting: exclude events that match the exclude pattern
-    #<filter kubernetes.ingress.**>
-    #   @type grep
-    #   @id id_grep.fluentd_ingress
-    #   <exclude>
-    #      key host
-    #      pattern /oai/
-    #   </exclude>
-    #</filter>
+    <filter kubernetes.ingress.**>
+       @type grep
+       @id id_grep.fluentd_ingress
+       <exclude>
+          key host
+          pattern /oai/
+       </exclude>
+    </filter>
 
     <filter kubernetes.ingress.**>
         @type geoip
