added preliminary blacklisting patterns

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -86,12 +86,38 @@
 
     # Blacklisting: exclude events that match the exclude pattern
     <filter kubernetes.ingress.**>
-       @type grep
-       @id id_grep.fluentd_ingress
-       <exclude>
-          key host
-          pattern /oai/
-       </exclude>
+        @type grep
+        @id id_grep.fluentd_ingress
+        <or>
+            <exclude>
+                key message
+                pattern /portal/
+            </exclude>
+            <exclude>
+                key message
+                pattern /cm-acme/
+            </exclude>
+            <exclude>
+                key message
+                pattern /media-proxy/
+            </exclude>
+            <exclude>
+                key message
+                pattern /styleguide/
+            </exclude>
+            <exclude>
+                key message
+                pattern /pod-manager/
+            </exclude>
+            <exclude>
+                key message
+                pattern /clio/
+            </exclude>
+            <exclude>
+                key message
+                pattern /metis-statistics/
+            </exclude>
+        </or>
     </filter>
 
     <filter kubernetes.ingress.**>
