added preliminary blacklisting patterns

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -58,21 +58,20 @@
     </filter>
 
     # Add a "fluentd_type" property to log event
-    # Add a "fluentd_ingress" property to log event
     <filter kubernetes.ingress.**>
-        @type record_transformer
-        @id ingress_record_transformer
-        enable_ruby
-        <record>
-            # Used to determine which ES index log is written to
-            fluentd_type ingress
-            europeana_cluster "#{ENV['EANA_K8S_CLUSTER']}"
-            # extract wskey value if it exists
-            wskey ${record["args"][/.*wskey=([^&]*)/,1]}
-            # Sets property fluentd_ingress on the log event analogous to how fluentd_include is set in apps.conf
-            fluentd_ingress ${record.dig("kubernetes", "annotations", "fluentd/ingress") ? record.dig("kubernetes", "annotations", "fluentd/ingress") : ("false")}
-        </record>
-    </filter>
+       @type record_transformer
+       @id ingress_record_transformer
+       enable_ruby
+       <record>
+         # Used to determine which ES index log is written to
+         fluentd_type ingress
+         europeana_cluster "#{ENV['EANA_K8S_CLUSTER']}"
+         # extract wskey value if it exists
+         # TODO: this requires enable_ruby (which is expensive)
+         # see if we can extract wskey value in the parse regex
+         wskey ${record["args"][/.*wskey=([^&]*)/,1]}
+       </record>
+   </filter>
 
     # Whitelisting: only allow messages that have fluentd_ingress set to "true"
     #<filter kubernetes.ingress.**>
@@ -88,36 +87,10 @@
     <filter kubernetes.ingress.**>
         @type grep
         @id id_grep.fluentd_ingress
-        <or>
-            <exclude>
-                key message
-                pattern /portal/
-            </exclude>
-            <exclude>
-                key message
-                pattern /cm-acme/
-            </exclude>
-            <exclude>
-                key message
-                pattern /media-proxy/
-            </exclude>
-            <exclude>
-                key message
-                pattern /styleguide/
-            </exclude>
-            <exclude>
-                key message
-                pattern /pod-manager/
-            </exclude>
-            <exclude>
-                key message
-                pattern /clio/
-            </exclude>
-            <exclude>
-                key message
-                pattern /metis-statistics/
-            </exclude>
-        </or>
+        <exclude>
+            key message
+            pattern /portal|acme|media|clio|pod-manager|metis-statistics/
+        </exclude>
     </filter>
 
     <filter kubernetes.ingress.**>
