EA-3713 expand exclusion list to also not include other system logs and all SX team pods

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -4,19 +4,35 @@
     @label @app
     tag kubernetes.app.*
     path /var/log/containers/*.log
-    # exclude all kube_system containers. This pattern also matches the NGINX Ingress. We'll handle that separately
-    exclude_path ["/var/log/containers/*fluentd*.log","/var/log/containers/*ibm*.log","/var/log/containers/*rancher*.log","/var/log/containers/*_kube-system_*.log"]
+    # exclude all system containers. This pattern also matches the NGINX Ingress. We'll handle that separately
+    exclude_path ["/var/log/containers/fluentd*.log",                     # don't include fluentd pods themselves
+                  "/var/log/containers/*_kube-system_*.log",              # exclude all pods in kube_system namespace
+                  "/var/log/containers/*_ibm-system_*.log",               # all pods in ibm_system namespace
+                  "/var/log/containers/*_cattle-*-system_*.log",          # all pods in various cattle related namespaces
+                  "/var/log/containers/*_cert-manager_*.log",
+                  "/var/log/containers/*_external-secrets_*.log",
+
+                  "/var/log/containers/*_dev_*",                          # all pods in dev namespace (from SX team)
+                  "/var/log/containers/portal-js*",                       # all other SX team deployments
+                  "/var/log/containers/contribute-*",
+                  "/var/log/containers/contentful-proxy-*",
+                  "/var/log/containers/media-proxy-js-*",
+                  "/var/log/containers/styleguide-*",
+                  "/var/log/containers/cm-acme-http-solver-*",
+                  "/var/log/containers/pod-manager-cronjob-*" ]
     pos_file /var/log/kubernetes.app.log.pos
     read_from_head true
-    <parse>
 
-      # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
-      # matches from top to bottom, so more-specific patterns should always come first
+    <parse>
+        # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
+        # matches from top to bottom, so more-specific patterns should always come first
         @type multi_format
+        # Regular application format
         <pattern>
           format regexp
           expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
         </pattern>
+        # Fallback simple application format (goes into log field)
         <pattern>
           format regexp
           expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
@@ -57,7 +73,6 @@
            europeana_cluster "#{ENV['EANA_K8S_CLUSTER']}"
          </record>
        </filter>
-
 
      # Discard events without fluentd_include set to "true"
      <filter kubernetes.app.**>
@@ -109,7 +124,8 @@
         stream_identity_key docker.container_id
         key log
         timeout_label @output
-        # Application logs always start with a timestamp (TODO: make this a convention)
+        # Application logs always start with a timestamp
+        # Regex matches "2023-02-23T13:20:52.284+01:00" and "13:21:45.159"
         multiline_start_regexp /\d{2}:\d{2}:\d{2}\.\d+/
         flush_interval 5s
         use_first_timestamp true
