Also filter out www-* and bad_deployment-* pods And fix exclusion of cattle-system pods

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -8,7 +8,7 @@
     exclude_path ["/var/log/containers/fluentd*.log",                     # don't include fluentd pods themselves
                   "/var/log/containers/*_kube-system_*.log",              # exclude all pods in kube_system namespace
                   "/var/log/containers/*_ibm-system_*.log",               # all pods in ibm_system namespace
-                  "/var/log/containers/*_cattle-*-system_*.log",          # all pods in various cattle related namespaces
+                  "/var/log/containers/*_cattle-*system_*.log",           # all pods in various cattle related namespaces
                   "/var/log/containers/*_cert-manager_*.log",
                   "/var/log/containers/*_external-secrets_*.log",
 
@@ -18,7 +18,10 @@
                   "/var/log/containers/contentful-proxy-*",
                   "/var/log/containers/media-proxy-js-*",
                   "/var/log/containers/styleguide-*",
+                  "/var/log/www-*",
                   "/var/log/containers/cm-acme-http-solver-*",
+
+                  "/var/log/containers/bad-deployment-*",                 # pod eviction stuff created by infra team
                   "/var/log/containers/pod-manager-cronjob-*" ]
     pos_file /var/log/kubernetes.app.log.pos
     read_from_head true
