--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -18,6 +18,9 @@
             flush_mode interval
             flush_interval 1m
             flush_thread_count 5
+            chunk_limit_size 16m            # max size per chunk, default is 256MB for file buffer
+            total_limit_size 1024m          # max size in total, default is 64GB for file buffer
+            overflow_action throw_exception # default is throw_exception
             retry_forever
             retry_max_interval 30
         </buffer>
