--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -10,13 +10,13 @@
 </source>
 
 <label @ingress>
-# Parsing is done here instead of at the source, so we can suppress errors when filtering
+# Parsing is done here instead of at the source, so we can suppress regex/filtering issues by disabling the emit_invalid_record_to_error option
 # For some reason, the parser plugin only suppresses "pattern not matched" warning when in a <filter> block
 #  see: https://github.com/fluent/fluentd/issues/1617
     <filter kubernetes.ingress.**>
         @type parser
         key_name message
-        emit_invalid_record_to_error false
+        emit_invalid_record_to_error true
         <parse>
             @type regexp
             expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S+)",\s?"host": "(?<host>\S+)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]+)",\s?"request_uri": "(?<request_uri>\S+)",\s?"args": "(?<args>\S+)",\s?"request_id": "(?<request_id>[0-9a-fA-F]+)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S*)",\s?"upstream_status": (?<upstream_status>\d{3}),\s?"request_time": (?<request_time>-?[\d\.]+),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]+),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]+),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]+),\s?"user_agent": "(?<http_user_agent>.+)".*}/
