Rename field http_referrer to referrer and external_client to external_client_ip

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -20,12 +20,12 @@
         <parse>
             @type regexp
             # Sadly we haven't found a way to make the regex multiple line :-(
-            expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S*)",\s?"host": "(?<host>\S*)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]*)",\s?"request_uri": "(?<request_uri>.*?)",\s?"args": "(?<args>\S*)",\s?"request_id": "(?<request_id>[0-9a-fA-F]*)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S*)",\s?"upstream_status": (?<upstream_status>(-1|0|\d{3})),\s?"request_time": (?<request_time>-?[\d\.]*),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]*),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]*),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]*),\s?"user_agent": "(?<http_user_agent>.*?)",\s?"http_referrer": "(?<http_referrer>\S*)",\s?"body_bytes_sent": (?<body_bytes_sent>[\d\.]*),\s?"cf_connecting_ip": "(?<external_client>\S*)",?(?<new_fields>.*)}/
+            expression /^.*"time_date": "(?<time>\S+)",\s?"client": "(?<client-ipv4>\S*)",\s?"host": "(?<host>\S*)",\s?"scheme": "(?<scheme>https?)",\s?"request_method": "(?<request_method>[A-Z]*)",\s?"request_uri": "(?<request_uri>.*?)",\s?"args": "(?<args>\S*)",\s?"request_id": "(?<request_id>[0-9a-fA-F]*)",\s?"status": (?<status>\d{3}),\s?"upstream_addr": "(?<upstream_addr>\S*)",\s?"upstream_status": (?<upstream_status>(-1|0|\d{3})),\s?"request_time": (?<request_time>-?[\d\.]*),\s?"upstream_response_time": (?<upstream_response_time>-?[\d\.]*),\s?"upstream_connect_time": (?<upstream_connect_time>-?[\d\.]*),\s?"upstream_header_time": (?<upstream_header_time>-?[\d\.]*),\s?"user_agent": "(?<http_user_agent>.*?)",\s?"http_referrer": "(?<referrer>\S*)",\s?"body_bytes_sent": (?<body_bytes_sent>[\d\.]*),\s?"cf_connecting_ip": "(?<external_client_ip>\S*)",?(?<new_fields>.*)}/
             time_key time
             # time field used by buffer when pushing logs to Elasticsearch
             keep_time_key true
             time_format %Y-%m-%dT%H:%M:%S%:z
-            types status:integer,upstream_status:integer,request_time:float,upstream_connect_time:float,upstream_header_time:float,upstream_response_time:float
+            types status:integer,upstream_status:integer,request_time:float,upstream_connect_time:float,upstream_header_time:float,upstream_response_time:float,body_bytes_sent:integer
         </parse>
     </filter>
 
@@ -33,13 +33,17 @@
     <filter kubernetes.ingress.**>
         @type record_transformer
         @id ingress_record_transformer
+        # TODO Enable ruby is not ideal for performance, see also https://docs.fluentd.org/filter/record_transformer#enable_ruby
         enable_ruby
         <record>
             # Used to determine which ES index log is written to
             fluentd_type ingress
             europeana_cluster "#{ENV['EANA_K8S_CLUSTER']}"
-            # extract wskey value if it exists
+            # Extract wskey value if it exists
             wskey ${record["args"][/.*wskey=([^&]*)/,1]}
+            # Either use external_client_ip if it exists already, or copy over client-ipv4 value
+            # TODO test this
+            #external_client_ip ${if record["external_client_ip"].empty? then record["client_ipv4"]; end;}
         </record>
     </filter>
 
