EA-3521 always fill external_client_ip, either with client-ipv4 or with ip received from Cloudflare

--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -42,8 +42,8 @@
             # Extract wskey value if it exists
             wskey ${record["args"][/.*wskey=([^&]*)/,1]}
             # Either use external_client_ip if it exists already, or copy over client-ipv4 value
-            # TODO test this
-            #external_client_ip ${if record["external_client_ip"].empty? then record["client_ipv4"]; end;}
+            # Either use external_client_ip if it exists already, or copy over client-ipv4 value
+            external_client_ip ${if record["external_client_ip"].empty? then record["client-ipv4"]; else record["external_client_ip"] end;}
         </record>
     </filter>
 
