EA-3655 Save unparseable logs (for now in same index)

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -1,8 +1,9 @@
 <source>
-    @id kubernetes.app.log
     @type tail
-    @label @app
+    @id kubernetes.app.log
     tag kubernetes.app.*
+    @label @app
+
     path /var/log/containers/*.log
     # Exclude all system containers. This pattern also matches the NGINX Ingress. We'll handle that separately
     # Keeping this exclusion list up-to-date isn't strictly necessary, as we'll also check if the fluentd/include
@@ -29,8 +30,8 @@
     read_from_head true
 
     <parse>
-        # plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
-        # matches from top to bottom, so more-specific patterns should always come first
+        # Plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
+        # Matches from top to bottom, so more-specific patterns should always come first
         @type multi_format
         # Regular application format
         <pattern>
@@ -42,11 +43,16 @@
             format regexp
             expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
         </pattern>
+        # Ultimate fallback (write everything in log field)
+        <pattern>
+            format regexp
+            expression /^(?<log>.*)$/
+        </pattern>
         time_format  %Y-%m-%dT%H:%M:%S.%NZ
         time_key time
         time_type string
         localtime false
-      </parse>
+    </parse>
 </source>
 
 <label @app>
@@ -89,10 +95,18 @@
         </regexp>
     </filter>
 
-    # Re-tag log event for routing
+    # Re-tag log events for proper routing
     <match kubernetes.app.**>
         @type rewrite_tag_filter
-        @id kubernetes_multiline_routing
+        @id kubernetes_app_routing
+
+        # Empty stream field means it's unparsed data, so retag as "trash.*"
+        <rule>
+            key stream
+            pattern /^.+$/
+            invert true
+            tag trash.${tag}
+        </rule>
         # Re-tag events with fluentd_multiline: false as "plain.*"
         <rule>
             key fluentd_multiline
@@ -108,7 +122,20 @@
         </rule>
     </match>
 
-    # plain.* events go straight to @output
+    # Send trash items to different index
+#     <filter trash.**>
+#         @type record_transformer
+#         @id id_add_trash_type
+#         <record>
+#             fluentd_type trash
+#         </record>
+#     </filter>
+
+    # trash.* and plain.* events go straight to @output
+    <match trash.**>
+        @type relabel
+        @label @output
+    </match>
     <match plain.**>
         @type relabel
         @label @output
