EA-3655 Enable writing to unparsable index

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -123,13 +123,13 @@
     </match>
 
     # Send trash items to different index
-#     <filter trash.**>
-#         @type record_transformer
-#         @id id_add_trash_type
-#         <record>
-#             fluentd_type trash
-#         </record>
-#     </filter>
+    <filter trash.**>
+        @type record_transformer
+        @id id_add_trash_type
+        <record>
+            fluentd_type unparsable
+        </record>
+    </filter>
 
     # trash.* and plain.* events go straight to @output
     <match trash.**>
