--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -61,13 +61,13 @@
     </match>
 
     # Send trash items to different index
-#     <filter trash.**>
-#         @type record_transformer
-#         @id ingress_add_trash_type
-#         <record>
-#             fluentd_type trash
-#         </record>
-#     </filter>
+    <filter trash.**>
+        @type record_transformer
+        @id ingress_add_trash_type
+        <record>
+            fluentd_type unparsable
+        </record>
+    </filter>
 
     # Add additional fields to parsed logs
     <filter parsed.**>
