Working without additional parsing

--- a/local_test/local_apps.conf
+++ b/local_test/local_apps.conf
@@ -31,21 +31,17 @@
     pos_file ./result/kubernetes.app.log.pos
     read_from_head true
 
+    # We first do some basic parsing of only time and stream, so we can then try and combine multiline logs (e.g. stacktraces)
     <parse>
         # Plugin documentation: https://github.com/repeatedly/fluent-plugin-multi-format-parser#configuration
         # Matches from top to bottom, so more-specific patterns should always come first
         @type multi_format
-        # Regular application format
-        <pattern>
-            format regexp
-            expression  /(?<time>[^ ]*) (?<stream>stdout|stderr) \w [^ ]* (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)/
-        </pattern>
-        # Fallback simple application format (goes into log field)
+        # Basic application format
         <pattern>
             format regexp
             expression /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
         </pattern>
-        # Ultimate fallback (write everything in log field)
+        # Fallback: write everything in log field -> goes to unparsable index
         <pattern>
             format regexp
             expression /^(?<log>.*)$/
@@ -58,15 +54,13 @@
 </source>
 
 <label @app>
-    # Include additional kubernetes metadata in log output.
-    # These are added to a "kubernetes" property within the log event
+    # Include additional kubernetes metadata in log output. These are added to a "kubernetes" property within the log event
     <filter kubernetes.app.**>
         @type kubernetes_metadata
-        # Only include pod annotations starting with "fluentd/"
-        # ie. fluentd/include and fluentd/multiline
+        # Only include pod annotations starting with "fluentd/", ie. fluentd/include and fluentd/multiline
         annotation_match ["^fluentd/*"]
         @id filter_kube_metadata
-        # update Kubernetes metadata every 5 mins, instead of watching for changes
+        # Update Kubernetes metadata every 5 mins, instead of watching for changes
         watch false
         cache_ttl 300
     </filter>
@@ -102,12 +96,12 @@
         @type rewrite_tag_filter
         @id kubernetes_app_routing
 
-        # Empty stream field means it's unparsed data, so retag as "trash.*"
+        # Empty stream field means it's unparsed data, so retag as "unparsable.*"
         <rule>
             key stream
             pattern /^.+$/
             invert true
-            tag trash.${tag}
+            tag unparsable.${tag}
         </rule>
         # Re-tag events with fluentd_multiline: false as "plain.*"
         <rule>
@@ -124,51 +118,80 @@
         </rule>
     </match>
 
-    # Send trash items to different index
-    <filter trash.**>
+    # Send unparsable items to different index
+    <filter unparsable.**>
         @type record_transformer
-        @id id_add_trash_type
+        @id id_add_unparsable_type
         <record>
             fluentd_type unparsable
         </record>
     </filter>
 
-    # trash.* and plain.* events go straight to @output
-    <match trash.**>
+    # Futher routing....
+    #   unparsable.* goes straight to @output
+    <match unparsable.**>
         @type relabel
         @label @output
     </match>
+    #   plain.* events are processed further
     <match plain.**>
         @type relabel
-        @label @output
+        @label @app_more_parsing
     </match>
-
-    # relabel "multiline.* events for further processing"
+    #   multiline.* events are first combined and then processed further
     <match multiline.**>
         @type relabel
         @label @multiline
     </match>
 </label>
 
-# Handle multiline events
+# Combine multiline events
 <label @multiline>
     <filter multiline.**>
         @log_level trace
         @type concat
         @id id_concat.multiline
         stream_identity_key docker.container_id
-        key message
-        # Application logs always start with a timestamp
+        key log   # field that should be merged
+        # The "log" part that we parsed always starts with a timestamp, at least at the start of a stacktrace
+        # All subsequent lines in a stacktrace, do not have a timestamp, so they are combined
         # Regex matches "2023-02-23T13:20:52.284+01:00" and "13:21:45.159"
         multiline_start_regexp /[^T]?\d{2}:\d{2}:\d{2}\.\d+[^ ]/
+        separator " "
         flush_interval 3s
         # timeout label is needed to continue normal operations after flush timeout (see also https://arnoldgalovics.com/java-multiline-logs-fluentd/)
         timeout_label @output
         use_first_timestamp true
     </filter>
 
-    # relabel and emit to @output
     <match multiline.**>
+        @type relabel
+        @label @app_more_parsing
+    </match>
+</label>
+
+<label @app_more_parsing>
+#     <filter **>
+#         @log_level trace
+#         @type parser
+#         key_name log
+#         emit_invalid_record_to_error true
+#         <parse>
+#             @type multi_format
+#             # Regular application format
+#             <pattern>
+#                 format regexp
+#                 expression /(?<time>.+) (?<level>[^ ]*) (?<class>[^:]*):(?<code_line_number >[^ ]*) \[(?<thread>[^ ]*)\] - (?<message>.*)$/
+#             </pattern>
+#             # Fallback (write everything in log field)
+#             <pattern>
+#                 format regexp
+#                 expression /^(?<log>.*)/
+#             </pattern>
+#         </parse>
+#     </filter>
+
+    <match **>
         @type relabel
         @label @output
     </match>
